--- a/refs.bib
+++ b/refs.bib
@@ -1893,3 +1893,41 @@ title = {Spurious Correlations between Galaxies and Multiepoch Image Stacks in t
 journal = {The Astrophysical Journal Supplement Series},
 abstract = {A nonnegligible source of systematic bias in cosmological analyses of galaxy surveys is the on-sky modulation that is caused by foregrounds and variable image characteristics, such as observing conditions. Standard mitigation techniques perform a regression between the observed galaxy density field and sky maps of the potential contaminants. Such maps are ad hoc lossy summaries of the heterogeneous sets of coadded exposures that contribute to the survey. We present a methodology for addressing this limitation, and we extract spurious correlations between the observed distributions of galaxies and arbitrary stacks of single-epoch exposures. We study four types of galaxies (luminous red galaxies, emission-line galaxies, quasars, and Lyman-break galaxies) in the three regions of the DESI Legacy Surveys (North, South, and Dark Energy Survey), resulting in 12 samples with varying levels and types of contamination. We find that the new technique outperforms the traditional ones in all cases, and is able to remove higher levels of contamination. This paves the way for new methods that extract more information from multiepoch galaxy survey data and mitigate large-scale biases more effectively.}
 }
+
+@ARTICLE{2017MNRAS.466.1444C,
+       author = {{Clerkin}, L. and {Kirk}, D. and {Manera}, M. and {Lahav}, O. and {Abdalla}, F. and {Amara}, A. and {Bacon}, D. and {Chang}, C. and {Gazta{\~n}aga}, E. and {Hawken}, A. and {Jain}, B. and {Joachimi}, B. and {Vikram}, V. and {Abbott}, T. and {Allam}, S. and {Armstrong}, R. and {Benoit-L{\'e}vy}, A. and {Bernstein}, G.~M. and {Bernstein}, R.~A. and {Bertin}, E. and {Brooks}, D. and {Burke}, D.~L. and {Rosell}, A. Carnero and {Carrasco Kind}, M. and {Crocce}, M. and {Cunha}, C.~E. and {D'Andrea}, C.~B. and {da Costa}, L.~N. and {Desai}, S. and {Diehl}, H.~T. and {Dietrich}, J.~P. and {Eifler}, T.~F. and {Evrard}, A.~E. and {Flaugher}, B. and {Fosalba}, P. and {Frieman}, J. and {Gerdes}, D.~W. and {Gruen}, D. and {Gruendl}, R.~A. and {Gutierrez}, G. and {Honscheid}, K. and {James}, D.~J. and {Kent}, S. and {Kuehn}, K. and {Kuropatkin}, N. and {Lima}, M. and {Melchior}, P. and {Miquel}, R. and {Nord}, B. and {Plazas}, A.~A. and {Romer}, A.~K. and {Roodman}, A. and {Sanchez}, E. and {Schubnell}, M. and {Sevilla-Noarbe}, I. and {Smith}, R.~C. and {Soares-Santos}, M. and {Sobreira}, F. and {Suchyta}, E. and {Swanson}, M.~E.~C. and {Tarle}, G. and {Walker}, A.~R.},
+        title = "{Testing the lognormality of the galaxy and weak lensing convergence distributions from Dark Energy Survey maps}",
+      journal = {\mnras},
+     keywords = {gravitational lensing: weak, cosmology: observations, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2017,
+        month = apr,
+       volume = {466},
+       number = {2},
+        pages = {1444-1461},
+          doi = {10.1093/mnras/stw2106},
+archivePrefix = {arXiv},
+       eprint = {1605.02036},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.466.1444C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2021MNRAS.508.3125F,
+       author = {{Friedrich}, O. and {Andrade-Oliveira}, F. and {Camacho}, H. and {Alves}, O. and {Rosenfeld}, R. and {Sanchez}, J. and {Fang}, X. and {Eifler}, T.~F. and {Krause}, E. and {Chang}, C. and {Omori}, Y. and {Amon}, A. and {Baxter}, E. and {Elvin-Poole}, J. and {Huterer}, D. and {Porredon}, A. and {Prat}, J. and {Terra}, V. and {Troja}, A. and {Alarcon}, A. and {Bechtol}, K. and {Bernstein}, G.~M. and {Buchs}, R. and {Campos}, A. and {Carnero Rosell}, A. and {Carrasco Kind}, M. and {Cawthon}, R. and {Choi}, A. and {Cordero}, J. and {Crocce}, M. and {Davis}, C. and {DeRose}, J. and {Diehl}, H.~T. and {Dodelson}, S. and {Doux}, C. and {Drlica-Wagner}, A. and {Elsner}, F. and {Everett}, S. and {Fosalba}, P. and {Gatti}, M. and {Giannini}, G. and {Gruen}, D. and {Gruendl}, R.~A. and {Harrison}, I. and {Hartley}, W.~G. and {Jain}, B. and {Jarvis}, M. and {MacCrann}, N. and {McCullough}, J. and {Muir}, J. and {Myles}, J. and {Pandey}, S. and {Raveri}, M. and {Roodman}, A. and {Rodriguez-Monroy}, M. and {Rykoff}, E.~S. and {Samuroff}, S. and {S{\'a}nchez}, C. and {Secco}, L.~F. and {Sevilla-Noarbe}, I. and {Sheldon}, E. and {Troxel}, M.~A. and {Weaverdyck}, N. and {Yanny}, B. and {Aguena}, M. and {Avila}, S. and {Bacon}, D. and {Bertin}, E. and {Bhargava}, S. and {Brooks}, D. and {Burke}, D.~L. and {Carretero}, J. and {Costanzi}, M. and {da Costa}, L.~N. and {Pereira}, M.~E.~S. and {De Vicente}, J. and {Desai}, S. and {Evrard}, A.~E. and {Ferrero}, I. and {Frieman}, J. and {Garc{\'\i}a-Bellido}, J. and {Gaztanaga}, E. and {Gerdes}, D.~W. and {Giannantonio}, T. and {Gschwend}, J. and {Gutierrez}, G. and {Hinton}, S.~R. and {Hollowood}, D.~L. and {Honscheid}, K. and {James}, D.~J. and {Kuehn}, K. and {Lahav}, O. and {Lima}, M. and {Maia}, M.~A.~G. and {Menanteau}, F. and {Miquel}, R. and {Morgan}, R. and {Palmese}, A. and {Paz-Chinch{\'o}n}, F. and {Plazas}, A.~A. and {Sanchez}, E. and {Scarpine}, V. and {Serrano}, S. and {Soares-Santos}, M. and {Smith}, M. and {Suchyta}, E. and {Tarle}, G. and {Thomas}, D. and {To}, C. and {Varga}, T.~N. and {Weller}, J. and {Wilkinson}, R.~D. and {Wilkinson}, R.~D. and {DES Collaboration}},
+        title = "{Dark Energy Survey year 3 results: covariance modelling and its impact on parameter estimation and quality of fit}",
+      journal = {\mnras},
+     keywords = {large-scale structure of Universe, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2021,
+        month = dec,
+       volume = {508},
+       number = {3},
+        pages = {3125-3165},
+          doi = {10.1093/mnras/stab2384},
+archivePrefix = {arXiv},
+       eprint = {2012.08568},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021MNRAS.508.3125F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
