--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-This paper uses the angular power spectrum of luminous red galaxies (LRGs) selected from the Dark Energy Spectroscopic Instrument (DESI) imaging surveys to constrain the local primordial non-Gaussianity parameter $\fnl$. Our sample comprises over $12$ million LRG targets, spanning approximately $14,000$ square degrees of the sky, with redshifts ranging from $0.2< z < 1.35$. Galactic extinction, survey depth, and astronomical seeing are identified as the primary sources of systematic error using feature selection and cross-correlation techniques. Linear regression and artificial neural networks are applied to mitigate systematics and alleviate excess clustering signals on large scales. Our treatment methods are tested and calibrated rigorously against log-normal density simulations with and without $\fnl$ and systematic effects. We find that the neural network treatment outperforms linear regression in reducing remaining systematics in the DESI LRG sample. Assuming the universality relation, we find $\fnl = 47^{+14~(+29)}_{-11~(-22)}$ at $68\%$~($95\%$) confidence. Applying a more aggressive systematics treatment that includes regression against the full set of imaging maps we identified, our maximum likelihood value changes only slightly to $\fnl \sim 50$, but the uncertainty on $\fnl$ increases due to the aggressive treatment removing large-scale clustering information. We apply a series of robustness tests (e.g., cuts on imaging, declination, or scales) that show remarkable consistency in the obtained constraints. Our fiducial result can either be interpreted as a strong detection of non-zero $\fnl$ with the probability $P(\fnl>0)=99.9$ per cent, inconsistent with what is measured from Planck, or evidence for unknown sources of variation in the observed galaxy density (e.g., from calibration errors in photometric zero-point determination or in Galactic extinction corrections). Our results motivate follow-up studies of $\fnl$ with DESI spectroscopic samples, where the inclusion of 3D clustering modes should help separate imaging systematics.
+We use the angular power spectrum of luminous red galaxies (LRGs) selected from the Dark Energy Spectroscopic Instrument (DESI) imaging surveys to constrain the local primordial non-Gaussianity parameter $\fnl$. Our sample comprises over $12$ million LRG targets, spanning approximately $14,000$ square degrees of the sky, with redshifts ranging from $0.2< z < 1.35$. Galactic extinction, survey depth, and astronomical seeing are identified as the primary sources of systematic error using feature selection and cross-correlation techniques. Linear regression and artificial neural networks are applied to mitigate systematics and alleviate excess clustering signals on large scales. Our treatment methods are tested and calibrated rigorously against log-normal density simulations with and without $\fnl$ and systematic effects. We find that the neural network treatment outperforms linear regression in reducing remaining systematics in the DESI LRG sample. Assuming the universality relation, we find $\fnl = 47^{+14~(+29)}_{-11~(-22)}$ at $68\%$~($95\%$) confidence for our fiducial method. Applying a more aggressive systematics treatment that includes regression against the full set of imaging maps we identified, our maximum likelihood value changes only slightly to $\fnl \sim 50$, but the uncertainty on $\fnl$ increases due to the aggressive treatment removing large-scale clustering information. We apply a series of robustness tests (e.g., cuts on imaging, declination, or scales) that show remarkable consistency in the obtained constraints. Our fiducial result can either be interpreted as a strong detection of non-zero $\fnl$ with the probability $P(\fnl>0)=99.9$ per cent, inconsistent with what is measured from Planck, or evidence for unknown sources of variation in the observed galaxy density (e.g., from calibration errors in photometric zero-point determination or in Galactic extinction corrections). Our results motivate follow-up studies of $\fnl$ with DESI spectroscopic samples, where the inclusion of 3D clustering modes should help separate imaging systematics.
 \end{abstract}
