--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -78,14 +78,14 @@ The expected large-scale power is highly sensitive to the value of $\fnl$ such t
 \begin{equation}\label{eq:likelihood}
 -2\ln\mathcal{L} = (\log \tilde{C}(\Theta)-\log \tilde{C})^{\dagger} \mathbb{C}^{-1} (\log \tilde{C}(\Theta)-\log \tilde{C}),
 \end{equation}
-where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\rm shot}$; $\tilde{C}(\Theta)$ is the (binned) expected pseudo-power spectrum; $\tilde{C}$ is the (binned) measured pseudo-power spectrum; and $\mathbb{C}$ is the covariance on $\log\tilde{C}$ constructed from the $\fnl=0$ simulations. Flat priors are implemented for all parameters: $\fnl \in [-1000, 1000]$, $N_{\rm shot} \in [-0.001, 0.001]$, and $b \in [0, 5]$. %\mc{Anna: Some readers might wonder if the covariance estimated from the lognormal mocks is accurate enough. Could you add maybe some lines justifying this?}
+where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\rm shot}$; $\tilde{C}(\Theta)$ is the (binned) expected pseudo-power spectrum; $\tilde{C}$ is the (binned) measured pseudo-power spectrum; and $\mathbb{C}$ is the covariance on $\log\tilde{C}$ constructed from the $\fnl=0$ log-normal simulations. Log-normal simulations have been commonly used and validated to estimate the covariance matrices for galaxy density fields, and non-linear effects are subdominant on the scales of interest to $\fnl$ \citep[see, e.g.,][]{2017MNRAS.466.1444C, 2021MNRAS.508.3125F}. We also test for the robustness of our results against an alternative covariance constructed from the $\fnl=76.9$ mocks. Flat priors are implemented for all parameters: $\fnl \in [-1000, 1000]$, $N_{\rm shot} \in [-0.001, 0.001]$, and $b \in [0, 5]$. %\mc{Anna: Some readers might wonder if the covariance estimated from the lognormal mocks is accurate enough. Could you add maybe some lines justifying this?}
 %\mc{effect of mitigation (no weight clean mocks vs mitigated cont mocks)? whether lognormal is ok here? ask Anna for references about how well lognormal mocks can be employed.}
 
 
 \begin{figure*}
 \centering
 \includegraphics[width=0.85\textwidth]{hist_cl.pdf}
-\caption{The distribution of the first bin power spectra and its log transformation from the simulations with $\fnl=0$ (left) and $76.92$ (right). The log transformation alleviates the asymmetry in the distributions.}\label{fig:histcell}
+\caption{The distribution of the first bin power spectra and its log transformation from the simulations with $\fnl=0$ (left) and $76.9$ (right). The log transformation alleviates the asymmetry in the distributions.}\label{fig:histcell}
 \end{figure*}
 
 
@@ -123,7 +123,7 @@ It is imperative to note that these sets are selected prior to examining the aut
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{nbar_mocks.pdf}
-\caption{The mean density contrast of the DESI LRG targets as a function of the imaging systematic maps: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the results before imaging systematic correction. The red, blue and orange curves represent the relationships after applying the imaging weights from the linear models trained with \textit{eight maps}, \textit{two maps}, and \textit{three maps}. The green and pink curves display the results after applying the imaging weights from the nonlinear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $68\%$ dispersion of 1000 lognormal mocks with $\fnl=0$ and $76.92$, respectively.}\label{fig:nbarmock}
+\caption{The mean density contrast of the DESI LRG targets as a function of the imaging systematic maps: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the results before imaging systematic correction. The red, blue and orange curves represent the relationships after applying the imaging weights from the linear models trained with \textit{eight maps}, \textit{two maps}, and \textit{three maps}. The green and pink curves display the results after applying the imaging weights from the nonlinear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $68\%$ dispersion of 1000 lognormal mocks with $\fnl=0$ and $76.9$, respectively.}\label{fig:nbarmock}
 \end{figure*}
 
 
@@ -131,7 +131,7 @@ It is imperative to note that these sets are selected prior to examining the aut
 \centering
 \includegraphics[width=0.45\textwidth]{chi2test.pdf}
 \includegraphics[width=0.44\textwidth]{chi2test2.pdf}
-\caption{The remaining systematic error $\chi^{2}$ from the galaxy-imaging cross power spectrum (top) and the mean galaxy density contrast (bottom). The values observed in the DESI LRG targets before and after linear and nonlinear treatments are represented via vertical lines, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ and $76.92$.}\label{fig:chi2test}
+\caption{The remaining systematic error $\chi^{2}$ from the galaxy-imaging cross power spectrum (top) and the mean galaxy density contrast (bottom). The values observed in the DESI LRG targets before and after linear and nonlinear treatments are represented via vertical lines, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ and $76.9$.}\label{fig:chi2test}
 \end{figure}
 
 
@@ -166,7 +166,7 @@ and the total residual error as,
 \begin{equation}
 \chi^{2} = \delta_{X}^{T} \mathbb{C_{\delta}}^{-1} \delta_{X},
 \end{equation}
-where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.92$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however,  a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (dot-dashed blue curve), which is indicative of the psfsize-related systematics in our sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations in the low ends of depth and psfsize, in the z band, which implies nonlinear systematic effects exist. We find that the imaging weights from the nonlinear model trained with the three identified maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. Even with the nonlinear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. 
+where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.9$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however,  a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (dot-dashed blue curve), which is indicative of the psfsize-related systematics in our sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations in the low ends of depth and psfsize, in the z band, which implies nonlinear systematic effects exist. We find that the imaging weights from the nonlinear model trained with the three identified maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. Even with the nonlinear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. 
 
 Figure \ref{fig:chi2test} shows the $\chi^{2}$ histograms from the normalized cross spectrum (top) and mean density contrast (bottom) statistics which are obtained from the $\fnl=0$ and $76.9$ lognormal mocks, respectively with solid and dashed lines. The $\chi^{2}$ tests prove to be insensitive to the true $\fnl$ of the mocks, as we obtain consistent distributions for both statistics, regardless of the true $\fnl$ used for the mock generation. No mitigation is applied to these mocks, and thus the $\chi^{2}$ values are expected to be unbiased. The $\chi^{2}$ values observed in the DESI LRG targets are shown via the vertical lines for comparison, and summarized in Table \ref{tab:chi2test}. The corresponding $p$-values are inferred from the comparison to the clean $\fnl=0$ mocks. Before cleaning, our LRG sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear two maps approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with $p$-value $=0.0$. Adding the r-band psfsize, the linear three maps approach reduces the $\chi^{2}$ down to $195.9$ with $p$-value $=0.04$; however, we can reject the null hypothesis that our sample with the linear three maps is properly cleaned at $95\%$ confidence. Even though cleaning with linear all maps gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and $p$-value $=0.24$), it potentially makes the analysis more prone to regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear three maps}). The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with $p$-value $=0.59$. Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ ($p$-value $=0.69$). Our cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
 
